2007-06-20  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/network.c (open_SSL_connection): Better error
	handling for the gnutls function calls.

2007-06-20  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/network.c: Keep a pointer to the gnutls credentials
	struct so that it can be freed properly:
	(struct nessus_connection): New member tls_cred
	(release_connection_fd): Free tls_cred
	(open_SSL_connection): Store the credentials in the tls_cred
	member

2007-06-20  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/network.c (load_file, unload_file): New. Helper
	functions to load certificates and keys.
	(load_cert_and_key): New.  Loads certificate and key files into
	the gnuTLS credentials object.  This function supports decryption
	of private keys.
	(open_SSL_connection): use load_cert_and_key to load the
	certificate and key.  Remove the warnign about unsupported key
	decryption.  Load the CA files if given.

2007-06-14  Bernhard Herzog  <bh@intevation.de>

	First step in the code to move from OpenSSL to GnuTLS.  The code
	in network.c now uses GnuTLS instead of OpenSSL for stream
	connections.  There are still a few remnants of the OpenSSL code,
	though and code using the library will still need to link -lssl.

	* libopenvas/network.c (struct nessus_connection)
	(release_connection_fd, nessus_register_connection, sslerror)
	(nessus_SSL_init, open_SSL_connection, open_stream_connection)
	(open_stream_connection_unknown_encaps5)
	(read_stream_connection_unbuffered, write_stream_connection4)
	(stream_pending): Use GnuTLS instead of OpenSSL.
	(stream_get_ssl): Now always returns NULL since there's no SSL*
	associated with a stream anymore.  See the comments in the code
	for some of the implications of this.
	(tlserror, set_gnutls_sslv23, set_gnutls_sslv3, set_gnutls_tlsv1):
	New functions for the GnuTLS support.

2007-06-04  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/network.c (struct nessus_connection)